tailwind config complete

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@ body {
   max-width: 38rem;
   padding: 2rem;
 }
+
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
