--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,8 +5,7 @@
     <title>Hello World!</title>
 
   </head>
-  <body class="bg-gray-700">
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+  <body class="h-screen w-screen bg-gray-300">
+  
   </body>
 </html>
